[gd_scene load_steps=3 format=3 uid="uid://dv81vm4wxjjrp"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_4xsei"]

[sub_resource type="LabelSettings" id="LabelSettings_ssp2y"]
font_size = 32

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4xsei")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 556.0
offset_top = 304.0
offset_right = -556.0
offset_bottom = -304.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lets play with some balls!"
label_settings = SubResource("LabelSettings_ssp2y")

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="QuitGame" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitGame" to="." method="_on_quit_pressed"]
